# WizEngine

./: CMakeLists.txt  README.md  switch-install.sh
.github/workflows/: ubuntu.yml
include/PathFinder/: AStar.h  Dijkstra.h  Node.h  PathAlgorithm.h  PathFinder.h
include/SW/: GallerySprite.hpp  NinePatch.hpp  SelbaWard.hpp  Spline.hpp  Sprite3d.hpp  TileMap.hpp  TileMap.inl
include/WIZ/asset/: Asset.h  AssetBase.h  AssetLoader.h  FontAsset.h  MusicAsset.h  SinglePathAsset.h  SoundAsset.h  TextureAsset.h
include/WIZ/game/: BasicGame.h  Game.h  InputListener.h  Screen.h  WindowListener.h
include/WIZ/input/: Mapping.h  MappingDatabase.h
include/WIZ/logging/: DailyFileLogger.h  DateTimeLoggerWrapper.h  FileLogger.h  Logger.h  LoggerBase.h  MultiLogger.h  StdOutLogger.h  TagLoggerWrapper.h
include/WIZ/pathfinding/: PathFinderDebugDrawable.h  TileNode.h  TilePathFinder.h
include/WIZ/ui/: DialogBox.h  TextButton.h
include/WIZ/util/: FileUtil.h  MathUtil.h  SpriteUtil.h  StringUtil.h  string_util.h
src/PathFinder/: AStar.cpp  Dijkstra.cpp  Node.cpp
src/SW/: BitmapFont.cpp  BitmapText.cpp  Crosshair.cpp  ElasticSprite.cpp  GallerySprite.cpp  Line.cpp  NinePatch.cpp  PieChart.cpp  ProgressBar.cpp  Ring.cpp  SpinningCard.cpp  Spline.cpp  Sprite3d.cpp  Starfield.cpp
src/WIZ/asset/: AssetLoader.cpp  FontAsset.cpp  MusicAsset.cpp  SoundAsset.cpp  TextureAsset.cpp
src/WIZ/game/: BasicGame.cpp  Game.cpp  Screen.cpp
src/WIZ/input/: Mapping.cpp  MappingDatabase.cpp
src/WIZ/logging/: DailyFileLogger.cpp  DateTimeLoggerWrapper.cpp  FileLogger.cpp  LoggerBase.cpp  MultiLogger.cpp  StdOutLogger.cpp  TagLoggerWrapper.cpp
src/WIZ/pathfinding/: PathFinderDebugDrawable.cpp  TileNode.cpp  TilePathFinder.cpp
src/WIZ/ui/: DialogBox.cpp  TextButton.cpp
src/WIZ/util/: FileUtil.cpp  MathUtil.cpp
tests/: mapping_test.cpp  pathfinder_test.cpp
